# arian-receipts

./: .dockerignore  .env.example  .gitignore  Dockerfile  buf.gen.yaml  compose.yml  devenv.nix  flake.nix  go.mod  go.sum  pyproject.toml  readme.md
.github/: readme.md
.github/workflows/: build-image.yml  build.yml
app/: app.py  config.py  grpc.py  logging.py  main.py  schema.py  schemas.py  service.py  version.py
app/providers/: __init__.py  base.py  gemini.py
app/providers/gemini/: __init__.py
app/providers/local/: __init__.py  ocr.py  orc.py
app/transport/: rest.py
arian/v1/: account_pb2.py  account_services.proto  account_services_pb2.py  account_services_pb2_grpc.py  category.proto  category_pb2.py  category_services.proto  category_services_pb2.py  category_services_pb2_grpc.py  common_pb2.py  dashboard_pb2.py  dashboard_services.proto  dashboard_services_pb2.py  dashboard_services_pb2_grpc.py  enums_pb2.py  receipt_parsing_pb2.py  receipt_parsing_pb2_grpc.py  receipt_services_pb2.py  receipt_services_pb2_grpc.py  receipts_pb2.py  transaction_pb2.py  transaction_services.proto  transaction_services_pb2.py  transaction_services_pb2_grpc.py  user_pb2.py  user_services_pb2.py  user_services_pb2_grpc.py
cmd/server/: main.go
cmd/test-cli/: main.go
internal/server/: server.go
proto/: buf.yaml
proto/arian/v1/: dashboard.proto  receipt_services.proto  receipts.proto  user_services.proto
