[project]
name = "arian-receipts"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
	"fastapi",
	"google-genai",
	"llama-cpp-python",
	"opencv-python-headless",
	"pytesseract",
	"python-multipart",
	"uvicorn[standard]",
	"huggingface_hub",
	"python-json-logger",
	"opentelemetry-api",
	"opentelemetry-sdk",
	"opentelemetry-exporter-otlp",
	"opentelemetry-instrumentation-fastapi",
	"opentelemetry-instrumentation-logging",
]

[tool.ruff.format]
indent-style = "tab"