[project]
name = "arian-receipts"
version = "0.3.0"
requires-python = ">=3.11"
description = "receipt-parser microservice for arian"
readme = "readme.md"
authors = [{ name = "xhos" }]
license = { text = "MIT" }

dependencies = [
  "grpcio>=1.74.0",
  "protobuf>=6.31.1",
  "googleapis-common-protos>=1.70.0",
  "pydantic>=2.11.7",
  "python-json-logger>=3.3.0",
  "google-genai>=1.28.0",
  "opentelemetry-api>=1.36.0",
  "opentelemetry-sdk>=1.36.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.36.0",
  "opentelemetry-instrumentation-grpc>=0.57b0",
  "grpcio-reflection>=1.74.0",
]

[project.optional-dependencies]
# install with: uv add ".[local]"
local = [
  "pytesseract>=0.3.10",
  "opencv-python-headless>=4.10.0.84",
  "Pillow>=11.3.0",
  "numpy>=2.3.2",
  "llama-cpp-python>=0.2.80",
  "huggingface-hub>=0.24.0",
]

[project.scripts]
arian-receipts = "app.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
exclude = [
  "arian/",
  "arian/**",
  "*_pb2.py",
  "*_pb2_grpc.py",
]

[tool.ruff.format]
indent-style = "tab"
exclude = [
  "arian/",
  "arian/**", 
  "*_pb2.py",
  "*_pb2_grpc.py",
]

[dependency-groups]
dev = [
  "grpcio-tools>=1.73.1",
]
